# loggator

./: .env.example  .env.prod.example  .gitignore  DEPLOY.md  INGEST.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  seed_demo.py  seed_logs.py
loggator-api/: .dockerignore  .env.example  Dockerfile  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml
loggator-api/alembic/: env.py
loggator-api/alembic/versions/: 215529fc11a1_create_initial_tables.py  b32bfd4fba3b_add_log_embeddings_and_app_settings.py  c1a2b3d4e5f6_add_mitre_tactics_to_anomalies.py  c9d1e2f3a4b5_add_scheduled_analyses.py  d0e1f2a3b4c5_merge_heads.py  e1f2a3b4c5d6_add_system_events_and_audit_log.py  f3e4d5c6b7a8_multi_tenant_foundation.py  g4h5i6j7k8l9_tenant_api_keys.py  h5i6j7k8l9m0_billing_plans_and_tenant_billing.py  i6j7k8l9m0n1_secops_features.py  j8k9l0m1n2o3_users_password_hash.py  l1m2n3o4p5_msp_operator_tenants.py  l2m3n4o5p6_support_threads.py  n1o2p3q4r5_tenant_integrations.py
loggator-api/cli/: main.py
loggator-api/loggator/: config.py  main.py
loggator-api/loggator/alerts/: dispatcher.py
loggator-api/loggator/api/: websocket.py
loggator-api/loggator/auth/: __init__.py  api_keys.py  client.py  dependencies.py  local_password.py  password_hashing.py  schemas.py
loggator-api/loggator/db/: alert_registry.py  llm_registry.py  models.py  repository.py  session.py
loggator-api/loggator/enrichment/: ioc_extractor.py  lookup.py
loggator-api/loggator/llm/: chain.py  prompts.py  schemas.py
loggator-api/scripts/: seed_attack_logs.py  seed_local_msp_demo.py  seed_logs.py  seed_opensearch_demo.py
loggator-api/tests/: conftest.py  test_api_key_hash.py  test_connection_crypto.py  test_msp_scope.py  test_opensearch_ttl.py  test_rbac_membership.py  test_streaming_backoff.py  test_user_provisioning.py  test_websocket_queue.py
loggator-web/: auth.ts  (+8 more)
(+184 files in other folders)
